// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPair matches snapshot when priority is normal 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  font-size: 0.8em;
  padding-right: 15%;
  padding-top: 2px;
  padding-bottom: 2px;
  position: relative;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`DataPair matches snapshot when priority is primary 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  padding-right: 15%;
  padding-top: 2px;
  padding-bottom: 2px;
  position: relative;
  overflow: hidden;
}

.c0:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 4em;
  right: 4em;
  border-top: 1px solid hsl(0, 0%, 92%);
  border-left: 8em solid transparent;
  border-right: 8em solid transparent;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
